test/types/enum/diten/varEnumOutOfBounds.good
A
B
C
D
varEnumOutOfBounds.chpl:10: error: halt reached - enumerated type out of bounds
