test/types/enum/diten/varEnumOutOfBounds.chpl
enum myEnum { A = 3, B = 7, C = 1, D = 5 };

var a = 3, b = 7, c = 1, d = 5;
var badval = 4;

writeln(a:myEnum);
writeln(b:myEnum);
writeln(c:myEnum);
writeln(d:myEnum);
writeln(badval:myEnum);

